crates/elenchus-parser/tests/snapshots/errors__garbage_top_level_line.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        FACT a b\n        %%% not a statement\n        FACT c d\n        \"#)"
---
RESULT: 1 syntax error

statement  (1 problem)
  expected one of these statements:
      DOMAIN <name>
      FACT [<domain>.]<Subject> <predicate> [<object>]
      NOT <Subject> <predicate> [<object>]
      ASSUME [NOT] <Subject> <predicate> [<object>]
      PREMISE <name>:  then a list body or a WHEN ... THEN implication
      RULE <name>:  then a WHEN ... THEN implication
      CHECK [<subject>] [BIDIRECTIONAL]
      SET <name>  then one element per line (>= 1)
      IMPORT "<path>" [AS <alias>]
    line 3, col 9 - expected a statement — a line must start with DOMAIN, SET, FACT, NOT, ASSUME, PREMISE, RULE, CHECK, or IMPORT
      |         %%% not a statement
      |         ^^^^^^^^^^^^^^^^^^^
